--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -30,6 +30,7 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
+      <span style="padding: 0px 8px;">{{ rawData.length }} Locations</span>
       <button class="btn btn-outline-success my-2 my-sm-0" type="button" data-toggle="modal"
         data-target="#exampleModal">Import</button>
     </form>
@@ -78,7 +79,11 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-success" (click)="importLocation()">Import</button>
+          <button type="button" class="btn btn-success" (click)="importLocation()" [disabled]="importProgress > 0">Import</button>
+        </div>
+
+        <div class="progress">
+          <div *ngIf="importProgress > 0" class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
         </div>
       </form>
     </div>
