--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -37,9 +37,12 @@
   </div>
 </nav>
 
-<div>
-  <div id="map" style="height:500px;">
+<div style="height:100%; width:100%">
+  <!-- <div id="map" style="height:500px;">
+  </div> -->
 
+  <div id="googlemaps" #googlemaps
+    style="width:100%; height: 100%; position: relative; overflow: hidden; padding-right: 50%;">
   </div>
 </div>
 
@@ -79,11 +82,13 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-success" (click)="importLocation()" [disabled]="importProgress > 0">Import</button>
+          <button type="button" class="btn btn-success" (click)="importLocation()"
+            [disabled]="importProgress > 0">Import</button>
         </div>
 
         <div class="progress">
-          <div *ngIf="importProgress > 0" class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+          <div *ngIf="importProgress > 0" class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+            role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
         </div>
       </form>
     </div>
